[gd_scene load_steps=4 format=3 uid="uid://bc1a6lahvt80r"]

[ext_resource type="PackedScene" uid="uid://c7ssjlpdmob4j" path="res://Main/HUD/menu_button/menu_button_base.tscn" id="1_rr241"]
[ext_resource type="Script" uid="uid://cfjxx84cr7twe" path="res://Main/HUD/menu_button/menu_button_check.gd" id="2_ks0wd"]
[ext_resource type="Theme" uid="uid://cfmgf0quvx1bf" path="res://Assets/theme/custom_theme.tres" id="3_yy0rb"]

[node name="checkButton" node_paths=PackedStringArray("button_mask_array") instance=ExtResource("1_rr241")]
size_flags_horizontal = 0
script = ExtResource("2_ks0wd")
global_var_reference = "narrator_enabled"
button_mask_array = []
button_text = "Narrador"

[node name="menuButton" parent="." index="0"]
toggle_mode = true

[node name="contentMargin" parent="." index="1"]
theme_override_constants/margin_top = 0

[node name="CheckBox" type="CheckBox" parent="contentMargin/HBoxContainer" index="0"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("3_yy0rb")
button_mask = 0

[node name="Label" parent="contentMargin/HBoxContainer" index="1"]
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="." index="2"]
layout_mode = 2
mouse_filter = 2

[connection signal="toggled" from="menuButton" to="." method="_on_menu_button_toggled"]
